fix lkogin and block ui message

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1271,5 +1271,6 @@
     "ZoomImageIn": "Zoom image in",
     "ZoomImageOut": "Zoom image out",
     "ZoomIn": "Zoom in",
-    "ZoomOut": "Zoom out"
+    "ZoomOut": "Zoom out",
+    "InitSessionPleaseWait":"Initialze session please wait ......"
 }
