--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1278,5 +1278,6 @@
     "ZoomImageIn": "Acercar la imagen",
     "ZoomImageOut": "Alejar la imagen",
     "ZoomIn": "Acercarse",
-    "ZoomOut": "Alejarse"
+    "ZoomOut": "Alejarse",
+    "InitSessionPleaseWait":"Iniciando session espere por favor ......"
 }
