Add basic routes

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -2,8 +2,8 @@
     "Accept": "Sí, estoy seguro",
     "AcceptActionDocumentMessage": "¿Seguro que desea finalizar la revisión de los documentos rechazados, aplicar los cambios y reanudar el fujo de este lote ?",
     "AcceptActionDocumentTitle": "Finalizar la revisión",
-    "AcceptButton": "Acpetar",
-    "AccpetButton": "Acpetar",
+    "AcceptButton": "Aceptar",
+    "AccpetButton": "Aceptar",
     "Action": "Acción",
     "Actions": "Acciones",
     "ActionType": "Tipo de acción",
