Create configuration ribbon

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1058,7 +1058,7 @@
     "SendRecognition": "Send to recognition",
     "SendStatus": "Send status",
     "SendToConvertToPdf": "Sent to convert to PDF",
-    "SendToDigitalizationExceptionQueue": "Send to exception queue",
+    "SendToDigitalizationExceptionQueue": "Send to exception",
     "SendToRecognition": "Sent to recognition",
     "SendToSupervisor": "Send to the supervisor",
     "Sent": "Sent",
