--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1065,7 +1065,7 @@
     "SendRecognition": "Enviar a reconocimiento",
     "SendStatus": "Estado de envío",
     "SendToConvertToPdf": "Enviado a convertir a PDF",
-    "SendToDigitalizationExceptionQueue": "Enviar a la cola de excepciones",
+    "SendToDigitalizationExceptionQueue": "Enviar a excepciones",
     "SendToRecognition": "Enviado a reconocimiento",
     "SendToSupervisor": "Enviar al supervisor",
     "Sent": "Enviado",
